Wed Oct  2 21:38:30 2013  Yusuke Endoh  <mame@tsg.ne.jp>

	* ext/socket/ifaddr.c (rsock_getifaddrs): fix possible memory leak.
	  When a system had no interface, this function used xmalloc for root
	  but did not return any reference to it.  This patch fixes it by
	  immediately returning an empty array if no interface is found.
	  Coverity Scan found this bug.

Wed Oct  2 21:37:04 2013  Yusuke Endoh  <mame@tsg.ne.jp>

	* random.c (make_seed_value): a local array declaration was accessed
	  out of scope.  Coverity Scan found this bug.

Wed Oct  2 18:52:40 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: relax GC condition due to malloc_limit.

	* gc.c (GC_MALLOC_LIMIT_MAX): change default value
	  (256MB -> 512MB) and permit zero to ignore max value.

	* gc.c (vm_malloc_increase, vm_xrealloc): do not cause GC on realloc.

	* gc.c (gc_before_sweep): change debug messages.

Wed Oct  2 16:26:49 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_close_read): duplex IO should wait its child process
	  even after close_read.

Wed Oct  2 15:39:13 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* vm_core.h: use __has_attribute() instead of __clang__major__ because
	  clang says "Note that marketing version numbers should not be used
	  to check for language features, as different vendors use different
	  numbering schemes. Instead, use the Feature Checking Macros."
	  http://clang.llvm.org/docs/LanguageExtensions.html

Wed Oct  2 14:19:57 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_close_write): detach tied IO for writing before closing
	  to get rid of race condition.  [ruby-list:49598]

	* io.c (rb_io_close_read): keep fptr in write_io to be discarded, to
	  fix freed pointer access when it is in use by other threads, and get
	  rid of potential memory/fd leak.

Tue Oct  1 23:44:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* vm_core.h: use __attribute__((unused)) in UNINTIALIZED_VAR on clang